<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/serviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceDescInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceNameInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/storeWebsiteInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceDescInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/business_types"
            android:layout_below="@+id/storeWebsiteInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/business_types">

            <RelativeLayout
                android:id="@+id/pic_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/storeProfilePic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ProgressBar
                    android:id="@+id/logoProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:enabled="false"
                android:text="@string/upload" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
