<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/storeNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/storeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/storeAreaInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storeNameInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/areaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/storeWebsiteInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storeAreaInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/storeCountersInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storeWebsiteInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/counters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/counters"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadLayout"
            android:layout_below="@+id/storeCountersInputLayout">

            <RelativeLayout
                android:id="@+id/pic_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/storeProfilePic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ProgressBar
                    android:id="@+id/logoProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:enabled="false"
                android:text="@string/upload" />

        </RelativeLayout>

        <Spinner
            android:layout_below="@+id/uploadLayout"
            android:id="@+id/counterSpinner"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <RelativeLayout
            android:id="@+id/counterConfigLayout"
            android:layout_below="@+id/counterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/counterNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/counterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/counter_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="@integer/maxLines" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/maxTokensInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/counterNameInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/counterMaxTokens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/counter_max_tokens"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="@integer/maxLines" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/counterAddButton"
                android:layout_below="@+id/maxTokensInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UPDATE"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
