<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/serviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceDescInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceNameInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceDurationInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceDescInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duration"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="@integer/maxLines" />

        </android.support.design.widget.TextInputLayout>

        <in.mobifirst.tagtree.view.LinearLayoutWithMaxWidth
            android:id="@+id/weekGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceDurationInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="M"
                android:textOn="M" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="T"
                android:textOn="T" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="W"
                android:textOn="W" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="T"
                android:textOn="T" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="F"
                android:textOn="F" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="S"
                android:textOn="S" />

            <in.mobifirst.tagtree.view.WeekButton
                style="@style/RecurrenceDayOfWeekStyle"
                android:textOff="S"
                android:textOn="S" />
        </in.mobifirst.tagtree.view.LinearLayoutWithMaxWidth>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weekGroup"
            android:layout_marginTop="16dp"
            android:text="SUBMIT" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/seekbar_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="EARLY MORNING" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/earlymorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:absoluteMaxValue="6.0"
                app:absoluteMinValue="0.0"
                app:step="0.5"
                app:textAboveThumbsColor="@android:color/holo_purple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="MORNING" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/morning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:absoluteMaxValue="12.0"
                app:absoluteMinValue="6.0"
                app:step="0.5"
                app:textAboveThumbsColor="@android:color/holo_purple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="AFTERNOON" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/afternoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:absoluteMaxValue="18.0"
                app:absoluteMinValue="12.0"
                app:step="0.5"
                app:textAboveThumbsColor="@android:color/holo_purple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="EVENING" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/evening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:absoluteMaxValue="24.0"
                app:absoluteMinValue="18.0"
                app:step="0.5"
                app:textAboveThumbsColor="@android:color/holo_purple" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar_placeholder"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="Same for all DAYS" />

            <Button
                android:id="@+id/update"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="UPDATE"
                android:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
